hkg legco working

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -273,19 +273,23 @@
  #Tooltips
  Basic_Law_HKG_idea_tt: "§HThis idea will be cancalled after [HKG.GetFlag]Hong Kong Declare its §RIndependent.§!§!"
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
- OPEN_LegCo_BUTTON: "§3Legislative Council§! of Hong Kong S.A.R"
- OPEN_LegCo_BUTTON_TT: "§3The Legislative Council§! of the Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
+ HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §CPro-establishment camp§!, §8Pan-democracy camp§! and §GLocalist camp§!. Seats in the Legislative Council are decided by their approval ratings."
+ OPEN_LegCo_BUTTON: "§YLegislative Council§! of Hong Kong S.A.R"
+ OPEN_LegCo_BUTTON_TT: "§YThe Legislative Council§! of the Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
  CLOSE_LegCo_BUTTON: "Close the LegCo"
  HKG_LegCo_TITLE: "Legislative Council"
- legco_pro_beijing_seats: "§CPro-establishment Camp§! Seats: §C<WIP>§!"
- legco_pan_democracy_seats: "§8Pan-democracy Camp§! Seats: §8<WIP>§!"
- legco_localist_seats: "§GLocalist Camp§! Seats: §G<WIP>§!"
- legco_total_seats: "Total: §Y<WIP>§!"
- legco_approvement_seats: "Apprevement: §G<WIP>§!"
- legco_opposition_seats: "Opposition: §R<WIP>§!"
- HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §CPro-establishment camp§!, §8Pan-democracy camp§! and §GLocalist camp§!. Seats in the Legislative Council are decided by their approval ratings."
- ###DYNAMIC MODIFIERS
-#Housing Issue
+ legco_pro_beijing_seats: "§CPro-establishment Camp§! Seats: §C[?legco_PE_seats]§!"
+ legco_pan_democracy_seats: "§8Pan-democracy Camp§! Seats: §8[?legco_PD_seats]§!"
+ legco_localist_seats: "§GLocalist Camp§! Seats: §G[?legco_LC_seats]§!"
+ legco_total_seats: "Total: §Y[?legco_total_seats]§!"
+ legco_approvement_seats: "Approval: §G[?legco_approval_seats]§!"
+ legco_opposition_seats: "Negative: §R[?legco_negative_seats]§!"
+ legco_current_motion: "Current Motion: [ROOT.legco_current_motion]"
+ legco_none_motion_tt: "None"
+ legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
+
+ #DYNAMIC MODIFIERS
+ #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
  UHM_update_pp_cost_TT: "Political Power Cost: [?UHM_political_power_cost_var|+]"
  UHM_update_stability_factor_TT: "Stability: [?UHM_stability_factor_var|+%]"
@@ -297,7 +301,7 @@
  UHM_update_consumer_goods_factor_TT: "Tax Cost: §Y[?UHM_consumer_goods_factor_var|%]§!"
  UHM_update_buildings_speed_TT: "Construction Speed: [?UHM_buildings_speed_var|+%]"
  UHM_update_industry_free_repair_TT: "Free Repair: [?UHM_industry_free_repair_var|+%]"
-#Triad
+ #Triad
  triads_dynamic_modifies_TT: "\nModify §Y$HKG_triads_dynamic_modifier$§! by"
  triads_update_pp_cost_TT: "Political Power Cost: [?triads_political_power_cost_var|+]"
  triads_update_stability_factor_TT: "Stability: [?triads_stability_factor_var|+%]"
@@ -306,11 +310,13 @@
  triads_update_democratic_drift_TT: "Daily Western Support: [?triads_democratic_drift_var|+]"
  triads_update_communism_drift_TT: "Daily Emerging Support: [?triads_communism_drift_var|+]"
  triads_update_nationalist_drift_TT: "Daily Nationalist Support: [?triads_nationalist_drift_var|+]"
+ triads_update_corruption_cost_factor_var_TT: "Cost to change Corruption: [?triads_corruption_cost_factor_var|+]"
  
  HKG_triad_evidance: "Triad's Criminal Evidence"
  HKG_triad_strength: "Triad's Strength"
  HKG_modify_triad_evidance_tt: "§YTriad's Criminal Evidence§! changes by [?HKG_modify_triad_evidance|+0] (Current: [?HKG.HKG_triad_evidance|Y0])\n"
  HKG_modify_triad_strength_tt: "§YTriad's Strength§! changes by [?HKG_modify_triad_strength|+0] (Current: [?HKG.HKG_triad_strength|Y0])\n"
+
  #Event
  hongkong.8.t: "The Dragen Year"
  hongkong.8.d: "Three years have passed since the reunification with the Mainland, Hong Kong has experienced the Asian financial crisis. But under Chinese rule, Hong Kong has not gone into decline as the West thought. As we enter the new millennium, Hong Kong will still prove to the world that its integration into China is not a bad thing..."
