fixed some stuff

--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -225,7 +225,7 @@ cuba.4.t:  "[FROM.GetName] demands our joining the blockade"
 cuba.4.d: "The American ambassador, at the meeting, stated the need to join the anti-Cuban Blockade. Otherwise, sanctions will be imposed on us"
 cuba.4.a: "We Will Join"
 cuba.5: "They agreed"
-cuba.5.t: "[FROM.GetName] made a statement and announced his accession to the anti-Cuban blockade"cuba.5.t
+cuba.5.t: "[FROM.GetName] made a statement and announced his accession to the anti-Cuban blockade"cuba.5.t"
 cuba.5.a: "Great"
 cuba.6.t: "Cuba proposes lifting the blockade"
 cuba.6.d: "According to the Cuban representative, relations between our peoples and Governments have reached a new level, and the blockade should be lifted"
