Fixed small issues

--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -5,6 +5,7 @@
  ###########
  ## IDEAS ##
  ###########
+ 
  GRN_Extreme_Temperature_Traning:0 "Extreme Tempreture Training"
  GRN_Extreme_Temperature_Traning_desc:0 ""
  
@@ -17,8 +18,8 @@
  GRN_uneducated_population:0 "Uneducated Population"
  GRN_uneducated_population_desc:0 "With the nation not having many high quality, academic institutions, only a small portion of the population has opportunities for higher education"
  
- GRN_Student_exchange_Program:0 "Student Exchange Program"
- GRN_Student_exchange_Program_desc:0 "People from all over the globe can now come to study in our nation and vice versa. Allows for better research on collaborative projects."
+ GRN_Student_Exchange_Program:0 "Student Exchange Program"
+ GRN_Student_Exchange_Program_desc:0 "People from all over the globe can now come to study in our nation and vice versa. Allows for better research on collaborative projects."
  
  GRN_Scientific_Advancements:0 "Scientific Advancements"
  GRN_Scientific_Advancements_desc:0 "Our nation is progressing further and further everyday! Our efforts to develop world-class scientific programs and modernize society is starting to pay off."
@@ -156,8 +157,8 @@
  ## AIR ##
  #########
  
- GRN_expand_Kangerlussuaq_Airport:0 "Expand Kangerlussuaq Airport"
- GRN_expand_Kangerlussuaq_Airport_desc:0 "Kangerlussuaq airport is the largest air transport hub on the island. Investing in it would allow us to stock more planes and facilitate international flights more easily."
+ GRN_Expand_Kangerlussuaq_Airport:0 "Expand Kangerlussuaq Airport"
+ GRN_Expand_Kangerlussuaq_Airport_desc:0 "Kangerlussuaq airport is the largest air transport hub on the island. Investing in it would allow us to stock more planes and facilitate international flights more easily."
  
  #############
  ## ECONOMY ##
@@ -193,11 +194,11 @@
  GRN_lower_schools_initatives:0 "Support for Small Schools"
  GRN_lower_schools_initatives_desc:0 "If we supported, invested, and expanded small schools in our country we could bring better education to more people."
 
- GRN_expand_the_Nuuk_university:0 "Expand the Greenlandic University"
- GRN_expand_the_Nuuk_university_desc:0 "The university of Nuuk better known as the Greenlandic university was the first university in our country and is also the biggest one. If we want to have more, and better educated people we should expand this university in Nuuk "
+ GRN_expand_the_Nuuk_University:0 "Expand the Greenlandic University"
+ GRN_expand_the_Nuuk_University_desc:0 "The university of Nuuk better known as the Greenlandic university was the first university in our country and is also the biggest one. If we want to have more, and better educated people we should expand this university in Nuuk "
  
- GRN_further_scientific_advancments:0 "Further Scientific Advancments"
- GRN_further_scientific_advancments_desc:0 "Modern country needs to have be a scientific country, if we countinue investing our money in researching new things. Soon more things will be discoverd"
+ GRN_Further_Scientific_Advancments:0 "Further Scientific Advancments"
+ GRN_Further_Scientific_Advancments_desc:0 "Modern country needs to have be a scientific country, if we countinue investing our money in researching new things. Soon more things will be discoverd"
 
  GRN_invite_foreign_investors:0 "Invite Foreign Investors"
  GRN_invite_foreign_investors_desc:0 "Foreign investors could realy expand our economy. "
@@ -210,7 +211,7 @@
  GRN_Further_our_Excavition_Programs_desc:0 "We have already got part of our resources in our hands hoever there is still a large part of them that wasn't uncovered so we should get to exploring these resources. "
 
  GRN_Establishing_NunaOil:0 "Establishing NUNAOIL"
- GRN_Establishing_NunaOil_desc:0 "We could trade our oil with countries that need it. But firstly, we need to uncover this oil"
+ GRN_Establishing_NunaOil_desc:0 "We could trade our oil with countries that need it. But first, we need to uncover this oil, the effects of this on our budget may be mitigated with the nationalization of petroleum."
 
  ###############
  ## POLITICAL ##
@@ -220,7 +221,7 @@
  GRN_Greenlandic_Politics_desc:0 "The politcs in our country are very similar and tame in nature, with two major coalitions dominating over the Inatsisartut. But the question is, who will eventually win over the hearts and minds of our people?"
  
  GRN_Left_Coalition:0 "Coalition of the Near-Left"
- GRN_Left_Coalition_desc:0 "Siumit and Inuit Ataqatigiit are social democratic parties. Usually they advocate for more autonomous and environmentalist policies."
+ GRN_Left_Coalition_desc:0 "Siumit and Inuit Ataqatigiit are both social democratic parties. Usually they advocate for more autonomous and environmentalist policies."
  
  GRN_Northern_Democratic_Principles:0 "Northern Social Democratic Models"
  GRN_Northern_Democratic_Principles_desc:0 "The scandinavian model of social democracy and other similar movements in the north have been proven succesful to our Scandinavian brothers and our Canadian neighbour, so maybe we should also try to implementing this socio-political system in our country."
@@ -232,7 +233,7 @@
  GRN_Global_Immigrants_desc:0 "Our population is small, and there are people who are looking for a home in countries like ours. If we invited them to our country, our population would begin to grow."
  
  GRN_Right_Coalition:0 "Alliance of the Near-Rigth"
- GRN_Right_Coalition_desc:0 "Atassut and Demokraatit are liberal conservative parties. Usually they advocate for more unionist and market reform policies."
+ GRN_Right_Coalition_desc:0 "Atassut and Demokraatit are both liberal conservative parties. Usually they advocate for more unionist and market reform policies."
  
  GRN_native_recrutment_program:0 "Native Recruitment Program"
  GRN_native_recrutment_program_desc:0 ""
@@ -241,7 +242,7 @@
  GRN_help_for_small_buisnesses_desc:0 "Small buiseneeses are the one who needs our help the most."
  
  GRN_Nordic_Immigrants:0 "Accept Only Nordic Immigrants"
- GRN_Nordic_Immigrants_desc:0 "Immigrants = bad. The only time that immigration isn't considered as bad is if those migrants are coming from the heart of the Danish Realm." 
+ GRN_Nordic_Immigrants_desc:0 "Immigrants = bad. The only time that this is not true is if, those immigrating are coming from the heart of the Danish Realm." 
  
  ###############
  ## DIPLOMACY ##
@@ -249,38 +250,55 @@
 
  GRN_Foreign_Policy:0 "Foreign Affairs Focus"
  GRN_Foreign_Policy_desc:0 "Greenland isn't the only place in the world, in fact we're pretty small country so we should focus on getting allign with other nations."
+ 
  GRN_establish_our_own_forgein_ministry:0 "Establish Our Own Foreign Ministry "
  GRN_establish_our_own_forgein_ministry_desc:0 "we have been dependent on Denmark as people who will represent our nation on the world stage, but the times have changed, and Denmark is no longer needed as our overlords. It's finnaly time to start going the long way of becoming indepndent "
+ 
  GRN_depend_on_Denmark:0 "Countinue Dependence on Denmark"
  GRN_depend_on_Denmark_desc:0 "We have been part of Denamrk for too long, so we can't ust leave them like that, we should increase our ties with the mainland"
- GRN_corporation_with_nordic_council:0 "Ties with the Nordic Council"
- GRN_corporation_with_nordic_council_desc:0 "We should strenghten our ties with Nordic council"
- GRN_trade_with_nordic_council:0 "Trade with Nordic Council"
- GRN_trade_with_nordic_council_desc:0 "After we have increased and strenghten our relations with other countries participating in the Nordic council, the time has came to increase our exports and imports from both us and them. "
- GRN_NAPA:0 "NAPA"
- GRN_NAPA_desc:0 "NAPA will be an institute created by the Nordic council. It's goal is to promote Nordic culture around Greenland"
- GRN_Nordic_immigrants:0 "Nordic Immigrants"
- GRN_Nordic_immigrants_desc:0 "We need to embrance Nordic culture and countinue our cooperation, we need to increase number of immigrants that are Nords in our country"
- GRN_Russian_ties:0 "Russian Ties"
- GRN_Russian_ties_desc:0 "Russia could be an important partner, if we strenghten out ties with them."
+ 
+ GRN_Russian_Ties:0 "Russian Ties"
+ GRN_Russian_Ties_desc:0 "Russia could be an important partner, if we strenghten out ties with them."
+ 
  GRN_Russian_Investors:0 "Russian Investors"
  GRN_Russian_Investors_desc:0 "Inviting Russian investors could help expand our economy."
+ 
  GRN_Russian_Army_Discipline:0 "Russian Army Discipline"
  GRN_Russian_Army_Discipline_desc:0 "Russian army is one of the biggest and most discipline armies in the world, and we could learn from that"
- GRN_American_ties:0 "American Ties"
- GRN_American_ties_desc:0 "America is our partner, and they have helped us many times, we should invest in making them our closer friends"
- GRN_American_airbases:0 "American Airbases"
- GRN_American_airbases_desc:0 "America has a reason to protect us, our island could be us as naval, or air base, and we have an important geographical posititon. USA will be happy if we let them create some airbases in our country "
+ 
+ GRN_American_Ties:0 "American Ties"
+ GRN_American_Ties_desc:0 "America is our partner, and they have helped us many times, we should invest in making them our closer friends"
+ 
+ GRN_American_Airbases:0 "American Airbases"
+ GRN_American_Airbases_desc:0 "America has a reason to protect us, our island could be us as naval, or air base, and we have an important geographical posititon. USA will be happy if we let them create some airbases in our country "
+ 
  GRN_Student_exhange_program:0 "Student Exhange Program"
  GRN_Student_exhange_program_desc:0 ""
+ 
  GRN_Foreign_Military_Advaisors:0 "Foreign Military Advisors"
  GRN_Foreign_Military_Advaisors_desc:0 "Greenland doesn't have the best general staff, but we can improve it by inviting people from difrent countries"
+ 
  GRN_Army_Traning:0 "Army Traning"
  GRN_Army_Traning_desc:0 ""
+
+ GRN_corporation_with_nordic_council:0 "Ties with the Nordic Council"
+ GRN_corporation_with_nordic_council_desc:0 "We should strenghten our ties with Nordic council"
+
+ GRN_trade_with_nordic_council:0 "Trade with Nordic Council"
+ GRN_trade_with_nordic_council_desc:0 "After we have increased and strenghten our relations with other countries participating in the Nordic council, the time has came to increase our exports and imports from both us and them. "
+
+ GRN_NAPA:0 "NAPA"
+ GRN_NAPA_desc:0 "NAPA will be an institute created by the Nordic council. It's goal is to promote Nordic culture around Greenland"
+ 
+ GRN_Nordic_immigrants:0 "Nordic Immigrants"
+ GRN_Nordic_immigrants_desc:0 "We need to embrance Nordic culture and countinue our cooperation, we need to increase number of immigrants that are Nords in our country"
+ 
  GRN_economic_integration:0 "Economic Integration"
  GRN_economic_integration_desc:0 ""
+ 
  GRN_Danish_ties:0 "Danish ties"
  GRN_Danish_ties_desc:0 "We need to decide future of our relations with our overlords, Denmark"
+ 
  GRN_Expand_our_autonomy:0 "Expand our Autonomy"
  GRN_Expand_our_autonomy_desc:0 ""
  
