wp collapse fix

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -3671,8 +3671,8 @@
  Sov_warsaw_pact.14.a: "It's time to secure our Fatherland"
  SOV_AUTH_SS: "Russian Soviet National State"
  SOV_soviet_empire: "Soviet Empire"
- Sov_warsaw_pact.15.t: "Opportunity to escape from russian influence."
- Sov_warsaw_pact.15.d: "Recent events within our main ally, the USSR, have made it possible to withdraw from her sphere of influence. Now its leadership is dealing with internal problems rather than external ones, and we can remain its ally or follow our own path of development. Which is more suitable for us?"
+ Sov_warsaw_pact.15.t: "Opportunity to escape from Russian influence."
+ Sov_warsaw_pact.15.d: "Recent events within our main ally, Russia, have made it possible to withdraw from her sphere of influence. Now its leadership is dealing with internal problems rather than external ones, and we can remain its ally or follow our own path of development. Which is more suitable for us?"
  Sov_warsaw_pact.15.a: "Russia is no longer our ally"
  Sov_warsaw_pact.15.b: "We Stay"
 
