Simp_Chinese_Lang_fix

--- a/localisation/simp_chinese/MD_bookmarks_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_bookmarks_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  MODERN_DAY_NAME: "当今世界（过时）"
  MODERN_DAY_DESC: "饥饿问题仍旧普遍，收入增长亦停滞不前。面对着社会和科技的快速变革，整个世界都在忧心忡忡。无论是烽烟四起而化作一片焦土的中东地区，还是被民族主义和民粹主义席卷肆虐的西方，都像是引发了对全球一体化的强烈反弹。世界的重心也逐渐移向亚洲，但是这些新兴强国真的能够找到一套替代西方世界秩序的有效替代方案吗？"
- USA_MODERN_DAY_DESC: "美国，这个世界上仅存的超级大国，正陷在中东战争、政府债务以及中国和其他金砖国家经济崛起的泥潭之中，其国际力量逐渐下降。然而由于美国所处的独特地理位置，在全面安全且没有强敌环伺的前提下，可以继续通过海外驻军来保障自身及其盟国的切身利益。在国内，反精英和反全球化的民族主义情绪的不断蔓延催生出一位有史以来最令人难以信服的总统，唐纳德·特朗普。\n\n其在欧洲和亚洲的盟国，既担心美国的单边主义，又害怕美国对西方自由世界撒手不管。那么，美国还能取得平衡来使西方的世界秩序占据上风吗？"
+ USA_MODERN_DAY_DESC: "美国，这个世界上仅存的超级大国，正陷在中东战争、政府债务以及中国和其他金砖国家经济崛起的泥潭之中，其国际力量逐渐下降。然而由于美国所处的独特地理位置，在全面安全且没有强敌环伺的前提下，可以继续通过海外驻军来保障自身及其盟国的切身利益。在国内，反精英和反全球化的民族主义情绪的不断蔓延催生出一位有史以来最令人难以信服的总统，唐纳德·特朗普。\n\n其在欧洲和亚洲的盟国，既担心美国的单边主义，又害怕美国对西方自由世界撒手不管。那么，美国究竟还能否找到一个平衡，使西方世界秩序得以保持？"
  ENG_MODERN_DAY_DESC: "英国遇到了迄今为止任何国家都没经历过的处境。2016年的英国脱欧公投以近52%的多数通过，成为第一个也是唯一一个援引欧盟第50条的国家。这将被视为英国人民最明智的抉择而载入史册，当然，也可能会是最糟糕的。\n\n是脱欧还是维持现状，这是个大问题。"
  FRA_MODERN_DAY_DESC: "作为全球的艺术、文化和外交中心，法国正在寻求着一个充满希望和机遇的新世纪。久远的君主制暴政和世界大战带来的破坏让法兰西投入欧盟的怀抱，并成为其创始国之一。\n\n只有时间会告诉我们，法国人在接下来的百年风雨中将如何自处。"
  GER_MODERN_DAY_DESC: "虽然历经之前的紧缩与改革，德国经济却仍旧没有被2008年金融危机和欧债危机的双重冲击所影响。作为当前最为强劲的欧洲经济体，一度谨小慎微且心不甘情不愿的德国不得不接下引领欧盟的重担，来直面英国脱欧以及重拾国家主权的呼声的愈演愈烈。对德国而言，欧元区和欧盟的存续并非是一种取舍，而是一种需要，因为强大的德国工业产出早已远超其内需，正亟待一个大到足以容纳其商品输出的综合市场。此外，随着人口呈下降趋势，德国必须依靠引入移民来填补空缺。在民族主义抬头的情况下，这一抉择势必会引发争议。"
@@ -10,7 +10,7 @@
  CHI_MODERN_DAY_DESC: "中国四面环山和丛林的地理环境保护了它，但也将它与世界其他地区隔离开来。作为一个拥有大量少数民族的多民族帝国，光是维持领土完整就需要付出相当大的努力，因为它需要对其腹地和有争议的领土进行大量投资才能维持控制。然而，它最大的弱点也许是它对公海出口和贸易的依赖——公海由美国及其亚太盟友控制。中国要成为真正的超级大国，就需要在规模和质量上与美国海军竞争，并将当前的亚洲竞争对手变成盟友。中国外交因缺乏有吸引力的政治模式而受到阻碍。然而，其庞大的外汇储备以及利用外汇储备进行海外投资的意愿推动了它的发展。"
  BRA_MODERN_DAY_DESC: "世纪之交，巴西正在缓慢崛起。这个国家有伟大的潜力。 它是世界上最大的新兴经济体之一，增长持续加速。然而，近年来，巴西经济正从1995年亚洲金融危机和货币贬值导致的严重衰退中恢复过来。现在，一个新的政党竞争者已经登场。劳工党已经取代并迅速获得关注。\n\n你能否重振国家曾经伟大的经济，或者劳工党及其社会主义政策能否站稳脚跟？"
  UKR_MODERN_DAY_DESC: "2014年，乌克兰陷入了随时一触即发且一发不可收拾的境地。“尊严革命”推翻了维克多·亚努科维奇的独裁统治，建立起以彼得罗·波罗申科为首的亲西方新政府。即便是给出了许多竞选承诺，但新的领导人却为了谋取私利，不惜将国家带入了更大的债务陷阱，对此民众已忍无可忍。克里米亚半岛被前盟友吞并，顿巴斯东部地区又被战火肆虐，虽然距离下届选举只有几年时间，但乌克兰人民还能撑到总统任期结束吗？"
- TUR_MODERN_DAY_DESC: "近年来并不宽容。 尽管库尔德工人党的威胁已经基本消除，但我们无法想出彻底消除它的解决方案。政变企图被击退才过去几个月，尽管有些人甚至开始忘记这件事，但一些肇事者仍然在逃，其中很少有人仍在我国境内，有些人已经躲在国外或受到我们的敌人的庇护，包括 ，蛇头，法图拉·居伦。与此同时，一些圈子一直在散布谣言，称埃尔多安亲自策划了政变，并使其未能摆脱反对派并夺取更多权力。尽管如此，一部分被清洗的人最终被证明是无辜的，这些错误的定罪得到了证实。"
+ TUR_MODERN_DAY_DESC: "近年来并不容易。 尽管库尔德工人党的威胁已经基本消除，但我们无法想出彻底消除它的解决方案。政变企图被击退才过去几个月，尽管有些人甚至开始忘记这件事，但一些肇事者仍然在逃，其中很少有人仍在我国境内，有些人已经躲在国外或受到我们的敌人的庇护，包括，蛇首法图拉·居伦。与此同时，一些圈子一直在散布谣言，称埃尔多安亲自策划了政变，并故意让其失败以摆脱反对派并夺取更多权力。尽管如此，被清洗的一部分人被证明是无辜的，这些错误的定罪已经被证明是错误的。"
  ISR_2000_MILLENNIUM_DAWN_DESC: "在某些方面，以色列从来没有处于一个好的地缘位置。由于与埃及和约旦邦交关系正常化，以色列阿拉伯邻国曾经构成的生存威胁在很大程度上已经消失。通过1993年《奥斯陆协定》为解决巴勒斯坦问题采取了重大的相关要约事宜。\n\n尽管如此，以色列仍然感到不安。恐怖主义和流氓国家证明了该国持续安全化的合理性，因为有关犹太国家未来轨迹的问题继续主导着以色列政治。以色列将如何应对来自国际社会、巴勒斯坦人和本国人民日益增长且常常相互矛盾的压力，这仍然是个未知数。"
  ISR_MODERN_DAY_DESC: "随着奥巴马的即将离任，以色列对恢复中东现状抱有希望。近年来，以色列受到美国部署重返亚太战略和阿拉伯之春之后的广泛政治不稳定，以及伊朗的复兴等因素的影响。以色列政府中的许多人希望，新总统将重振美国对以色列国防的承诺，并结束伊核问题为伊朗重新融入国际社会做出努力。\n\n但不管美国对以色列和整个中东问题的立场如何，以色列内部和更广泛地区的深层结构性紧张局势依然存在，这些紧张局势不能仅仅依靠美国的坚定支持来解决。"
  SYR_MODERN_DAY_DESC: "由于叙利亚武装部队内部的貌合神离，再加上在长达6年之久的血腥内战中的严重损耗，正规军如今已是强弩之末。在叙利亚战场上，他们已被一系列旨在为阿萨德挽回颓势的民兵组织、私人武装、真主党武装以及伊朗革命卫队所取代。不过，随着叙利亚经济的崩坏，其大部分领土都落入了恐怖分子、叛军和库尔德人的手中，叙利亚的统一似乎注定遥遥无期。"
@@ -83,7 +83,7 @@
  PHI_MILLENNIUM_DAWN_DESC: "最近的1998年选举，菲律宾政治领域的言论发生了巨大变化。埃斯特拉达和他的联盟“爱国菲律宾群众斗争”在反对他的斗争中取得了巨大的成功。在埃斯特拉达的领导下，菲律宾的经济增长率达到了惊人的3.4%，并将继续保持快速增长。此外，埃斯特拉达还开始动员菲律宾武装部队准备对摩洛伊斯兰解放阵线全面宣战。在这个几乎如画般的总统任期中，隐藏着腐败的怪物和随后的审判。"
  UAE_MILLENNIUM_DAWN_DESC: "被美国人亲切地戏称为“小斯巴达”的阿联酋，一直是美国和沙特的亲密盟友，同时也是多边军事行动的积极参与者。阿联酋武装部队，特别是其著名的空军和精英总统卫队，已经在阿富汗、利比亚、科索沃、索马里以及现在的也门大显身手。\n\n但阿联酋并不满足于简单地充当美国或沙特的配角。单就外交而言，阿联酋人已经取得远超与其体量应有的影响力，有时也会与对其昔日的盟友发起挑战，譬如将重心放在暂时与沙特所支持的哈迪政府结盟的也门分裂分子身上。此外，阿联酋是波斯湾地区唯一实现经济多元化的成功实例，迪拜赢得了全球城市和金融中心的美誉。"
  KOR_MILLENNIUM_DAWN_DESC: "大韩民国已经成功地克服了战争、贫困和独裁统治，成为世界上最发达和最稳定的国家之一。金大中总统因其在为韩国带来民主方面的作用而受到广泛尊重，许多人对他为实现与朝鲜的和平所做的努力充满希望。\n\n然而，他的政府已经被丑闻所玷污，韩国政治仍然极其两极化。政治党派、政府腐败以及围绕总统与朝鲜和解的努力的不确定性将决定韩国在这个新千年的未来。"
- NKO_MILLENNIUM_DAWN_DESC: "所谓的“隐士王国”是一个被外部世界认为是神秘和威胁并存的地方。有关该国秘密核计划的传闻不断扩散，其南部邻国仍然怀疑朝鲜的意图。但是，隐士王国坚不可摧的形象已经开始出现裂痕。朝鲜仍处于从被称为“苦难行军”的毁灭性饥荒中恢复的过程中，不得不依靠外部援助来帮助渡过难关。\n朝鲜治理体系的弱点是显而易见的。金正日是否会解决这些缺陷，并对外部世界采取外交手段以促进发展？或者，他是否会决定军队的好战性和党的意识形态的狂热必须通过战争来维持？"
+ NKO_MILLENNIUM_DAWN_DESC: "所谓的“隐士王国”是一个被外部世界认为是神秘和威胁并存的地方。有关该国秘密核计划的传闻不断扩散，其南部邻国仍然怀疑朝鲜的意图。但是，隐士王国坚不可摧的形象已经开始出现裂痕。朝鲜仍处于从被称为“苦难行军”的毁灭性饥荒中恢复的过程中，不得不依靠外部援助来帮助渡过难关。\n朝鲜的治理体系的弱点显而易见。金正日是否会解决这些缺陷，并对外部世界采取外交手段以促进发展？或者，他是否会决定军队的好战性和党的意识形态的狂热必须通过战争来维持？"
  BOT_MILLENNIUM_DAWN_DESC: "博茨瓦纳是非洲最发达的国家之一，民主稳定，人类发展指数高，腐败率低。博茨瓦纳在发现大量钻石矿藏之后获得了财富，成为非洲人均GDP最高的国家之一。然而，它并非没有问题；政治由博茨瓦纳民主党主导，许多人认为该党专制且缺乏说服力。此外，偷猎在该国许多野生动物保护区十分猖獗。钻石也不会永远存在，需要找到解决方案，为经济找到替代品。"
  AFG_MILLENNIUM_DAWN_DESC: "自1978年共产党掌权以来，阿富汗一直处于内战和外部干预的循环中。1989年苏联的解体和随后的1992年政权的垮台并没有带来和平。相反，圣战者派系之间的利益冲突导致战斗持续到1996年，当时巴基斯坦支持的塔利班利用内战夺取了阿富汗的大部分地区。他们的目标是消灭所有其他派别，迫使前军阀在马苏德将军的调解下组成北方联盟反对塔利班。这个饱受战争蹂躏的国家的未来会怎样？"
  ARM_MILLENNIUM_DAWN_DESC: "亚美尼亚在苏联解体后最早获得独立，并没有给它带来任何繁荣或伟大。民族主义者发动的纳戈尔诺-卡拉巴赫战争使共和国血本无归。同时，与其说是敌对行动本身，不如说是阿塞拜疆对亚美尼亚的封锁。执掌亚美尼亚的是一位有争议的政治家，他在亚美尼亚本身和有争议的阿尔扎赫地区都有很大的影响力。亚美尼亚能否在他的统治下获得荣耀，还是会滑向深渊？"
