--- a/localisation/simp_chinese/MD_opinion_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_opinion_modifiers_l_simp_chinese.yml
@@ -28,7 +28,7 @@
  Hosted_UAE_summit: "主持阿布扎比峰会"
  HAM_ISR_Occupation: "以色列占领巴勒斯坦"
  HAM_Are_Terrorists: "哈马斯是恐怖组织"
- HAM_Are_Partly_Terrorists: "不喜欢哈马斯"
+ HAM_Are_Partly_Terrorists: "厌恶哈马斯"
  HAM_Not_A_Recognized_country: "不被承认的国家"
  ISR_Arab_Conflict: "以色列-阿拉伯冲突"
  death_to_israel: "意图摧毁以色列"
@@ -134,7 +134,7 @@
  military_aid: "军事援助"
  nine_eleven_total_loyalty: "总忠诚度"
  nine_eleven_loyalty: "忠诚度"
- NATO_aspirant: "北约有志加入国"
+ NATO_aspirant: "北约意愿国"
  softwood_lumber_dispute: "软木木材争议"
  softwood_lumber_dispute_renegoitate: "重新谈判软木问题"
  supported_airstrikes: "支持空袭"
@@ -219,7 +219,7 @@
  belt_and_road_initiative_trade: "一带一路倡议"
  oil_exploration_disputed: "在有争议的水域进行石油勘探"
  nine_dash_line: "九段线"
- raid_of_dragon_city: "直捣龙城"
+ raid_of_dragon_city: "龙城踏破"
  joint_resource_projects: "联合资源项目"
  annexed_ukraine: "吞并乌克兰"
  annexed_ukraine_trade: "吞并乌克兰贸易"
@@ -307,7 +307,7 @@
  bamboo_network: "竹网的一部分"
  space_partners: "太空伙伴关系"
  denied_us: "否认我们的合作关系"
- recognized_us: "认可我们"
+ recognized_us: "承认我们的合法性"
  diplomatic_disloyalty: "外交不忠"
  maintained_CSTO: "维护集安组织"
  harsh_sanctions: "主要的贸易制裁"
