loc and a temp bookmark

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -139,19 +139,19 @@
  HKG_patriotic_education_curriculum_reform: "Patriotic Education Curriculum Reform"
  HKG_patriotic_education_curriculum_reform_desc: ""
  HKG_chinese_based_education_curriculum: "Chinese-Based Education Curriculum"
- HKG_chinese_based_education_curriculum_desc: ""
+ HKG_chinese_based_education_curriculum_desc: "We are Chinese, secondly, we are Hong Kong people. All schools in Hong Kong all need to teach in Chinese. All children are expected to speak Chinese."
  HKG_hong_kong_police_force: "Hong Kong Police Force"
- HKG_hong_kong_police_force_desc: ""
+ HKG_hong_kong_police_force_desc: "The Hong Kong Police Force was established on May 1, 1844, and it is the largest disciplined force within the Hong Kong government. Due to restrictions on the movement of the People's Liberation Army stationed in Hong Kong, functions typically performed by the military in other countries are handled by the police force in Hong Kong. For a long time, the Hong Kong Police have been acclaimed as "the finest in Asia.""
  HKG_anti_terrorist_train: "Anti-Terrorist Training"
- HKG_anti_terrorist_train_desc: ""
+ HKG_anti_terrorist_train_desc: "The millennium has brought prosperity and opportunity, but also more new challenges. Terrorism must not take root in Hong Kong."
  HKG_purchase_chinese_weapons: "Purchase Chinese Armament"
  HKG_purchase_chinese_weapons_desc: ""
  HKG_create_CTRU: "Create the Counter-Terrorism Response Unit"
- HKG_create_CTRU_desc: ""
+ HKG_create_CTRU_desc: "Counter-Terrorism Response Unit or called CTRU, is a rapid reaction force set up to respond to terrorist activities. They will be the elite of the elite."
  HKG_police_system_reform: "Police System Reform"
  HKG_police_system_reform_desc: ""
  HKG_investigate_police_triad_cooperation_problem: "Investigate the Police-Triad Cooperation Issue"
- HKG_investigate_police_triad_cooperation_problem_desc: ""
+ HKG_investigate_police_triad_cooperation_problem_desc: "We could plant undercover agents into the Triads, so will they. These moles are leaking a lot of our operations ahead of time. We will go through the ICAC and OCTB itself catch these “Hak Ging”."
  HKG_anti_protest_train: "Extensive Riot Training"
  HKG_anti_protest_train_desc: ""
  HKG_purchase_anti_riot_armour: "Acquire Riot Equipment"
@@ -161,7 +161,7 @@
  HKG_form_elite_team: "Form the Elite Team"
  HKG_form_elite_team_desc: ""
  HKG_typhoon_shelter_from_financial_storm: "Shelter from the Financial Storm"
- HKG_typhoon_shelter_from_financial_storm_desc: ""
+ HKG_typhoon_shelter_from_financial_storm_desc: "The storm has passed, it's time to clean up the mess."
  HKG_merge_into_HKEX: "Merge HKCE and HKFE into HKEX"
  HKG_merge_into_HKEX_desc: "After the 1997 Financial Storm, we will allow The Hong Kong Commodity Exchange(HKCE) and the Hong Kong Futures Exchange(HKFE) to merge into the Hong Kong Exchanges and Clearing Limited(HKEX) to enhance Hong Kong's competitiveness and to meet the challenges posed by the globalization of markets."
  HKG_greatest_entrepot: "The greatest Port Merchant in East Asia"
@@ -177,35 +177,35 @@
  HKG_develop_solar_power: "Invest in Solar Power"
  HKG_develop_solar_power_desc: ""
  HKG_T_PARK: "T·PARK Facility"
- HKG_T_PARK_desc:""
+ HKG_T_PARK_desc: ""
  HKG_indonesian_gas: "Gas from Jakarta"
- HKG_indonesian_gas_desc:""
+ HKG_indonesian_gas_desc: ""
  HKG_australian_oil: "Oil from Sydney"
- HKG_australian_oil_desc:""
+ HKG_australian_oil_desc: ""
  HKG_new_development_idea: "New Developmental Plan"
- HKG_new_development_idea_desc:""
+ HKG_new_development_idea_desc: ""
  HKG_invest_hong_kong: "Invest in Hong Kong"
- HKG_invest_hong_kong_desc:""
+ HKG_invest_hong_kong_desc: ""
  HKG_hong_kong_science_parks: "Science Parks"
- HKG_hong_kong_science_parks_desc:""
+ HKG_hong_kong_science_parks_desc: ""
  HKG_invite_talent_to_hong_kong: "Invite Talent to Hong Kong"
- HKG_invite_talent_to_hong_kong_desc:""
+ HKG_invite_talent_to_hong_kong_desc: ""
  HKG_hong_kong_cyberport: "The Cyberport"
- HKG_hong_kong_cyberport_desc:""
+ HKG_hong_kong_cyberport_desc: ""
  HKG_tech_incubation_programme: "Tech Incubation Program"
- HKG_tech_incubation_programme_desc:""
+ HKG_tech_incubation_programme_desc: ""
  HKG_favor_traditional_values: "Turn to Tradition"
- HKG_favor_traditional_values_desc:""
+ HKG_favor_traditional_values_desc: ""
  HKG_undercover_oppression: "Undercover Oppression"
- HKG_undercover_oppression_desc:""
+ HKG_undercover_oppression_desc: ""
  HKG_legislate_to_ban_LGBT: "Ban the LGBT collective"
- HKG_legislate_to_ban_LGBT_desc:""
+ HKG_legislate_to_ban_LGBT_desc: ""
  HKG_regulate_sale_of_residential_buildings: "Regulate Sale of Residential Buildings"
- HKG_regulate_sale_of_residential_buildings_desc:""
+ HKG_regulate_sale_of_residential_buildings_desc: ""
  HKG_land_reclamation: "Land Reclamation"
- HKG_land_reclamation_desc:""
+ HKG_land_reclamation_desc: ""
  HKG_lock_housing_price: "Freeze Housing Prices"
- HKG_lock_housing_price_desc:""
+ HKG_lock_housing_price_desc: ""
  HKG_expand_home_ownership_scheme: "Expand Home Ownership Scheme"
  HKG_expand_home_ownership_scheme_desc:""
  HKG_let_government_hold_companies: "Government-Owned Companies"
