--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1000,8 +1000,8 @@
  china.14.d: "The establishment of the Xinjiang Special Administrative Region can significantly change the international perception of us, especially by easing relations with India. Hopefully this move is the path to peace."
  china.14.a: "Hope for peace"
  
- china.15.t: "The Tibet Special Administrative Region is Established"
- china.15.d: "The establishment of the Tibetan Special Administrative Region can significantly change the international perception of us, especially by easing relations with India. Hopefully this move is the path to peace."
+ china.15.t: "The Xizang Special Administrative Region is Established"
+ china.15.d: "The establishment of the Xizang Special Administrative Region can significantly change the international perception of us, especially by easing relations with India. Hopefully this move is the path to peace."
  china.15.a: "Hope for peace"
  
  china.16.t: "China Central Authority Drawing lots from Golden Urn for choosing 9th Jebtsundamba Khutuktu"
