China event fix

--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -1589,3 +1589,6 @@
  china.64.t: "中国完成地区战略目标"
  china.64.d: "曾几何时，积弱的中央帝国被蜂拥而来的列强蚕食鲸吞，中国人民在经历了近百年的生死搏斗，终于彻底扫平四夷攘除奸凶，实现了区域内的中国治下的和平。"
  china.64.a: "祝贺你，指挥官。中国人民不会忘记你的功绩。"
+ china.65.t: "哔哩哔哩上线"
+ china.65.d: "哔哩哔哩，昵称B站，是一个位于上海的视频共享网站，用户可以在其中提交、查看视频并添加叠加评论。哔哩哔哩提供各种主题的视频，包括动漫、音乐、舞蹈、科技、电影、戏剧、时尚和视频游戏，但它也因亚文化内容创作者大量恶搞风格的模仿而闻名。\n哔哩哔哩以其滚动弹幕评论系统而闻名。\n哔哩哔哩还提供直播服务，观众可以与主播互动。"
+ china.65.a: "你所热爱的，就是你的生活。"
