--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -27,7 +27,7 @@
  BLR_AES: "Belarusian Nuclear Power Plant"
  BLR_AES_desc: "We will finally build our own nuclear power plant"
  BLR_Chinese_kal: "Trade Agreement with China"
- BLR_Chinese_kal_desc: ""
+ BLR_Chinese_kal_desc: "We will conclude a trade agreement with China, which will allow us to increase the production capacity of GrodnoAzot"
  BLR_Chinese_zdania: "Construction of New Factories"
  BLR_Chinese_zdania_desc: "The Chinese government is increasing investments in our country and is ready to build new factories"
  BLR_Chinese_konfuci: "Confucius Institutes"
@@ -180,9 +180,13 @@
  BLR_volt_auto: "Volat Auto"
  BLR_maz: "MAZ"
  BLR_MZKT: "MZKT"
+ BLR_MZKT_desc: "Minsk Wheel Tractor Plant is an enterprise specializing in the production of road and off—road heavy-duty vehicles, trailed vehicles, special wheeled chassis for the installation of equipment for enterprises of construction, oil and gas and machine-building complexes; a state enterprise under the jurisdiction of the State Military-Industrial Committee of the Republic of Belarus"
  BLR_minoitor: "Minotor-Service"
+ BLR_minoitor_desc: "Minotor-Service is a Belarusian enterprise located in Minsk and engaged in the development, production, modernization, repair and maintenance of combat tracked vehicles, as well as the supply of spare parts for the latter. It is one of the leading enterprises of the country's military-industrial complex"
  BLR_belspecveshtech: "Belspetsvneshtechnika"
+ BLR_belspecveshtech_desc: "Belspetsvneshtechnika, BSVT is a Belarusian state—owned foreign trade unitary enterprise founded in 1995. Specializes in the trade and production of weapons and dual-use products. It is a member of the State Military-Industrial Committee and is considered the country's leading enterprise in the field of arms exports"
  BLR_140_zavod: "140 Repair Plant"
+ BLR_140_zavod_desc: "The 140th Repair Plant is a state—owned enterprise of the military-industrial complex of Belarus, which specializes in the repair and modernization of armored vehicles and their engines"
  BLR_asilak: "Asilak"
  BLR_asilak_desc: "Belarusian multipurpose lightly armored car developed by the Belspetsvneshtechnika company. The prototype was the Russian armored car "Buran""
  BLR_fleita: "MLRS "Fleita""
@@ -487,7 +491,7 @@
  BLR_decommunize_belarus_society: "Decommunization of the Belarusian society"
  BLR_decommunize_belarus_society_desc: "The Soviet legacy must be left behind, the time has come for the progressive West"
  BLR_fight_the_oligarchs: "Fight Against Oligarchs"
- BLR_fight_the_oligarchs_desc: "We cannot allow the power of Oligarchs in our country, then we will definitely not see economic growth.”
+ BLR_fight_the_oligarchs_desc: "We cannot allow the power of Oligarchs in our country, then we will definitely not see economic growth."
  BLR_European_university_connections: "European Education"
  BLR_European_university_connections_desc: "We are ready to admit European universities to our country to improve the quality of education of our students."
  BLR_ally_taiwan: "Maintain an Alliance With Taiwan"
@@ -534,17 +538,24 @@
  BLR_Son_will_rule_desc: "It's time to change the leader, now Sergei Gaidukevich's son will lead the party and the country"
  BLR_rus_media: "Let The Russian Media In"
  BLR_rus_media_desc: "We will let Russian media into our territory without restrictions"
- BLR_russian_media: "Let Russian Media In"
- BLR_russian_market: "Integration Into the Russian Market"
- BLR_russian_fsb: "Let In The FSB Representative offices"
+ BLR_russian_fsb: "Let In The FSB Representative Offices"
+ BLR_russian_fsb_desc: "The FSB will work together with our special services and provide us with greater political stability"
  BLR_science_boost: "Investing in Science"
+ BLR_science_boost_desc: "Science should be sponsored as much as possible from the state budget"
  BLR_support_promka: "Support for Domestic Industry"
+ BLR_support_promka_desc: "We will support the domestic industry"
  BLR_boost_economic: "Accelerate Economic Growth"
+ BLR_boost_economic_desc: "Our reforms are making themselves felt and the economy has started to grow"
  BLR_anti_gibdd: "Anti-LGBT Policy"
+ BLR_anti_gibdd_desc: "We deny and will fight LGBT propaganda in our country"
  BLR_union_state_course: "Course Towards The Union State"
+ BLR_union_state_course_desc: "Our goal is the Union State, and we will strive for it"
  BLR_support_army: "Army Support"
+ BLR_support_army_desc: "We will support the military in our country, because it is only thanks to them that our country is still independent"
  BLR_russian_tver: "Purchase Wagons"
- BLR_russian_teplovzor: "Opening of Production of Thermal Imagers For Russia"
+ BLR_russian_tver_desc: "We will buy a lot of Wagons from Russia for our railways"
+ BLR_russian_teplovzor: "Opening of Production of Thermal Imagers"
+ BLR_russian_teplovzor_desc: "We will open the production of thermal imagers, which we will also be able to sell to Russia for their armed forces"
  BLR_cyphrovizacia: "Digitalization"
  BLR_cyphrovizacia_desc: "We will begin our journey towards the digital economy"
  BLR_russian_uvz: "Sign Exclusive Contracts With UVZ"
@@ -992,7 +1003,7 @@
  BLR_Economic: "Belarusian economy"
  BLR_Economic_desc: "We need to develop our economy, and we are using a number of measures to successfully implement this development."
  BLR_metro_minsk: "Expand the Minsk Metro"
- BLR_metro_minsk_desc: ""
+ BLR_metro_minsk_desc: "We will improve and expand the Minsk metro to improve the logistical characteristics of the city"
  BLR_it_industries_help: "Help Domestic It Developers"
  BLR_it_industries_help_desc: "It is necessary to help our IT sector with everything we can - this is the future of our country"
  BLR_viber: "Viber"
@@ -1614,7 +1625,7 @@
  BLR_riot_finance: "Financing of Riot Police"
  BLR_riot_finance_desc: "Our riot police units should be equipped and equipped with the best equipment, so here we should not spare our funds"
  BLR_MVD: "Ministry of Internal Affairs"
- BLR_MVD_omon_desc: "Belarusian body of state administration, which heads the system of internal affairs bodies and internal troops of the Ministry of Internal Affairs, carrying out, within its powers, regulation and management in the field of combating crime, protecting public order, ensuring public safety and coordinating the activities in this area of other republican bodies of state administration."
+ BLR_MVD_desc: "Belarusian body of state administration, which heads the system of internal affairs bodies and internal troops of the Ministry of Internal Affairs, carrying out, within its powers, regulation and management in the field of combating crime, protecting public order, ensuring public safety and coordinating the activities in this area of other republican bodies of state administration."
  BLR_Internal_troops: "Internal Troops"
  BLR_Internal_troops_desc: "State military organization of Belarus, which protects the rights of citizens, the constitutional system, security and sovereignty of the Republic of Belarus from criminal encroachments"
  BLR_kgb_expand: "State Security Committee"
@@ -1622,6 +1633,7 @@
  BLR_new_equipment_omon: "Special Unit - Alpha"
  BLR_new_equipment_omon_desc: "Group \"A\" (\"Alpha\") under the State Security Committee of the Republic of Belarus is an anti—terrorist unit of the KGB of Belarus. One of the most closed special forces of the special services and law enforcement agencies of Belarus.Alpha fighters are involved in operational and combat activities carried out by the KGB units of the Republic of Belarus related to the detention of suspects in espionage, hostage-taking, drug trafficking, smuggling, illegal trafficking of weapons and radioactive substances, extortion, illegal migration"
  BLR_Countering_Cybercrime: "Main Directorate for Countering Cybercrime"
+ BLR_Countering_Cybercrime_desc: "Cybercrimes should also be under our supervision"
  BLR_Increase_funding_Almaz: "Special Unit - ALMAZ"
  BLR_Increase_funding_Almaz_desc: "The Almaz Special Unit for Combating Terrorism is an anti—terrorist special unit of the Ministry of Internal Affairs of Belarus that performs a wide range of tasks to prevent terrorist acts and respond after they are committed. Reports directly to the Minister of Internal Affairs of the Republic of Belarus. According to media reports, the unit, in addition to counter-terrorism operations, takes part in the suppression of political opposition and is involved in the dispersal of mass protests"
  BLR_new_equipment_omon2: "Complete equipment upgrade"
@@ -1697,8 +1709,8 @@
  LIT_more_than_30_support_for_communists_TT: "§YLietuvos Socialistu Partija§! has more than §Y30%§! support."
  POL_more_than_30_support_for_nationalists_TT: "§YRuch Narodowy§! has more than §Y30%§! support."
  BLR_POL_more_than_50_percent_influence_TT: "§Y[BLR.GetAdjective]§! Influence in [POL.GetNameWithFlag] is Over 50%"
- BLR_with_tt: "Additional Income: $$§G0.150§!\n"
- BLR_without_tt: "Additional Income: $$§G0.210§!\n"
+ BLR_with_tt: "Additional Income: $$§G0.150§! From the Joint [BLR.GetFlag]Belarusian-[SOV.GetFlag]Russian §YPotassium Trade§!\n"
+ BLR_without_tt: "Additional Income: $$§G0.210§!From §YPotassium Trade§!\n"
  BLR_tourism_tt: "Additional Income: $$§G0.150§!\n"
  BLR_tourism3_tt: "Additional Income: $$§G0.250§!\n"
  BLR_tourism4_tt: "Additional Income: $$§G0.400§!\n"
@@ -1776,15 +1788,15 @@
  belarus_union.1.t: "Creation of the Union State"
  belarus_union.1.d: "Finally, our countries are full-fledged brothers. The Union State was created and now nothing will prevent us from fighting together for our future"
  belarus_union.1.a: "Finally!"
- belarus_union.9.t: "They are has agreed to create a Union State with us"
+ belarus_union.9.t: "They Are Has Agreed To Create a Union State With Us"
  belarus_union.9.d: "Finally, the Union State will be only not on paper but in reality. We have a bright future ahead of us"
  belarus_union.9.a: "Finally!"
- belarus_union.10.t: "They are refused to create a union state with us"
+ belarus_union.10.t: "They Are Refused To Create a Union State With Us"
  belarus_union.10.d: "Perhaps we have chosen the wrong path, and Russia does not need the brotherhood of our peoples"
  belarus_union.10.a: "It is sad"
  belarus_union.11.t: "Russia Issues An Ultimatum On The Issue of The Union State"
  belarus_union.11.d: "The Russian government is giving us a tough ultimatum on the issue of the Union state. Either we sign it, or there will be negative consequences. Should we succumb to such provocations?"
- belarus_union.11.a: "We will sign the integration into the Union State"
+ belarus_union.11.a: "We Will Sign The Integration Into The Union State"
  belarus_union.11.b: "No"
  belarus_union.12.t: "The Union State"
  belarus_union.12.d: "The Belarusian government agreed to immediately sign the treaty on the creation of the Union State in full"
