--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -917,16 +917,7 @@
  BLR_military_invest_desc: "Our country needs factories that will create new armored vehicles by the dozens."
  BLR_military_new_generations: "New Generation of Soldiers"
  BLR_military_new_generations_desc: "We will educate a new generation of soldiers in the ideals of militarism and love for their country."
- BLR_rne_in_belarus: "Russian National Unity in Belarussia"
- BLR_rne_in_belarus_desc: "Russian Russian nationalists will be invited to join our ranks to help defend the Russian Revolution in Belarussia."
- BLR_unite_with_rus_nazbol: "National Bolsheviks in Russia"
- BLR_unite_with_rus_nazbol_desc: "It's time for us to win back Russia from those who occupied it"
- BLR_use_nazbol_socnet: "Promote Our Ideas Through Social Networks"
- BLR_use_nazbol_socnet_desc: "We must influence the minds of young people, because it is our future. Social networks are an ideal place for propaganda"
- BLR_nazbol_bribe_politician: "Bribe Politicians"
- BLR_nazbol_bribe_politician_desc: "Any politician is corrupt - the only question is the price"
- BLR_nazbol_take_russia: "Limonov's Banner Over The Kremlin"
- BLR_nazbol_take_russia_desc: "Finally! Russia is free!"
+ 
  BLR_Taler_ruble: "Belarusian Taler"
  BLR_Taler_ruble_desc: "We must get rid of the ruble completely, replacing it with our new currency."
  BLR_National_science: "Scientific And Economic Growth"
@@ -1364,7 +1355,36 @@
 
 
 
-
+ BLR_soviet_system: "National Bolshevik Belarus"
+ BLR_soviet_system_desc: "The National Bolsheviks have seized power in the country and are ready to begin their first economic reforms. One of them will be a return to the Soviet economic system, in view of the unsuccessful experience of the previous ruler."
+ BLR_free_weapon: "Free Carrying of Weapons"
+ BLR_free_weapon_desc: "We will allow our citizens to carry weapons freely in the country, they have the right to self-defense!."
+ BLR_new_church: "New Religion"
+ BLR_new_church_desc: "It's time to create a new religion that meets the interests of our state!."
+ BLR_reform_education: "Education Reform"
+ BLR_reform_education_desc: "The educational system is in a terrible state, we will fix it and introduce serious changes to this system. One of the innovations will be that we will reduce the learning time of schoolchildren and students, preparing them faster to become full-fledged citizens."
+ BLR_ruralisation: "Ruralization"
+ BLR_ruralisation_desc: "The trend of the 21st century is the resettlement of people to cities from villages, we will reverse this and offer the poor or homeless to go to villages, in return we stimulate their activities in new dwellings."
+ BLR_revoult_army: "The Revolutionary Army"
+ BLR_revoult_army_desc: "Our army did not show itself in the best light, it needs people who are burning with the passion of the revolution, ready to throw themselves at an enemy machine gun for the sake of the motherland."
+ BLR_revoult_army_zeks: "Allow Prisoners To Be Recruited Into The Army"
+ BLR_revoult_army_zeks_desc: "We will start recruiting prisoners from prisons into the army, into separate battalions. Stop feeding the prisoners, they must feed the flame of the revolution!."
+ BLR_revoult_army_volunteer: "Revolutionary Spirit"
+ BLR_revoult_army_volunteer_desc: "Some of our soldiers are so eager to fight, even to another country. Perhaps we should not restrain their zeal and be ready to send them to fulfill their international duty?."
+ BLR_revoult_army_gco: "Guards of Communism Orthodox"
+ BLR_revoult_army_gco_desc: "We will create our own unique army, by analogy with the Iranian IRGC, their experience has greatly impressed us. They will be called the Guards of Communism Orthodox."
+ BLR_work_army: "The Workers' Army"
+ BLR_work_army_desc: "We will send all the unemployed to production, setting up the production of necessary goods for our state in the first place."
+ BLR_revoult_army_gco_ground_force: "Ground Forces"
+ BLR_revoult_army_gco_ground_force_desc: "The main and most numerous type of troops in the composition GCO. In peacetime, it is equipped with light weapons. Main purpose: internal security; secondary: external defense in conjunction with the regular armed forces of Belarus."
+ BLR_revoult_army_gco_anti_corrupt: "Anti-Corruption Revolutionary Committee"
+ BLR_revoult_army_gco_anti_corrupt_desc: "We will create a special unit that will deal with the fight against corruption in our country, no one will hide from the hand of justice."
+ BLR_revoult_army_gco_air: "Air Force"
+ BLR_revoult_army_gco_air_desc: "We will create and give our guards the opportunity to use aviation to fulfill their goals."
+ BLR_revoult_army_anti_west: "The Anti-Western Doctrine"
+ BLR_revoult_army_anti_west_desc: "Western civilization has always been and will always be our enemy, which seeks to destroy us."
+ BLR_revoult_army_interbrigade: "Interbrigades"
+ BLR_revoult_army_interbrigade_desc: "We intend to form units of interbrigades, which we will send abroad to protect our interests."
 
 
 
@@ -1374,6 +1394,15 @@
  BLR_intermarium_faction: "Intermarium"
 
  #Ideas
+ BLR_nazbol_soviet_system_idea: "National Bolshevik Economic System"
+ BLR_revoult_army_idea: "Revolutionary Army"
+ BLR_anti_west_idea: "The Anti-Western Doctrine"
+ GCO_anti_corruption_idea: "Anti-Corruption Revolutionary Committee"
+ GCO_idea: "Guards of Communism Orthodox"
+ BLR_interbrigade_idea: "Interbrigades"
+ BLR_free_weapon_idea: "Free Carrying of Weapons"
+ BLR_ruralisation_idea: "Ruralization"
+ BLR_revoult_spirits_idea: "Revolutionary Spirit"
  BLR_pro_russian_military: "Pro-russian military"
  BLR_prorussian_officers: "Pro-russian officers"
  BLR_pro_russian_government: "Pro-russian Government"
