--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1209,6 +1209,7 @@
  SOV_added_140z: "§YIntegration§! Of §Y[BLR.GetFlag]Belarusian§! 140 Avia Plant"
  SOV_added_140z1: "§YIntegration§! Of §Y[BLR.GetFlag]Belarusian§! 140 Avia Plant"
  SOV_sozdat_union_state: "§YCreate§! a Union State By §RForce§!"
+ SOV_pro_union_state_revout: "§YPro-Union§! Coup"
  BLR_poezdka_po_region_rf: "§YMake a Trip§! to Regions of Y[SOV.GetNameWithFlag]§!"
  BLR_luka_on_tv: "§YSpeak§! on Union Television"
  BLR_verbovka_chinovnik: "§YRecruit§! Several Regional Officials"
@@ -1731,6 +1732,7 @@
  #Tooltips
  BLR_LAT_more_than_50_percent_influence_TT: "§Y[BLR.GetAdjective]§! Influence in [LAT.GetNameWithFlag] is Over 50%"
  BLR_SOV_more_than_70_percent_influence_TT: "§Y[BLR.GetAdjective]§! Influence in [SOV.GetNameWithFlag] is Over 80%"
+ SOV_targeted_country_has_more_than_60_percent_influence_TT: "§Y[SOV.GetAdjective]§! Influence in [BLR.GetNameWithFlag] is Over 60%"
  SOV_targeted_country_has_more_than_75_percent_influence_TT: "§Y[SOV.GetAdjective]§! Influence in [BLR.GetNameWithFlag] is Over 75%"
  SOV_BLR_more_than_90_percent_influence_TT: "§Y[SOV.GetAdjective]§! Influence in [BLR.GetNameWithFlag] is Over 90%"
  SOV_ABK_more_than_80_percent_influence_TT: "§Y[SOV.GetAdjective]§! Influence in [ABK.GetNameWithFlag] is Over 80%"
@@ -2279,6 +2281,9 @@
  belarus_another.64.t: "Belarus Closes Joint Potassium Trader"
  belarus_another.64.d: "The confrontation between our two Potassium trading enterprises has reached its limit and the Belarusian government has decided to allocate its own company and create its own trader."
  belarus_another.64.a: "Sad"
+ belarus_another.65.t: "Pro-Union Coup"
+ belarus_another.65.d: "We tried to carry out a coup of power in Belarus using all our administrative and law enforcement resources, as well as connections."
+ belarus_another.65.a: "Let's Look At The Result"
 
  belarus_GDL.1.t: "Belarus Wants to Rule Our Country."
  belarus_GDL.1.d: "Pro-Belarusian nationalists have a great influence in our country, so the Belarusian authorities decided to give us an ultimatum - to allow them into the government or face the consequences. What do we say to that?"
