--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1161,3 +1161,7 @@
  STATE_1160: "Ungava"
  STATE_1161: "Kitaa"
  STATE_1162: "Tunu"
+ STATE_1163: "Kidal"
+ STATE_1164: "Gao"
+ STATE_1165: "Menaka"
+ STATE_1166: "Kayes"
