--- a/Changelog.txt
+++ b/Changelog.txt
@@ -70,6 +70,7 @@ v1.10.0
   - Revamp Iran region
   - Revamp Somalia region
   - Revamp Quebec and Greenland
+  - Revamp Western Africa
   - Adjustment in Afghanistan
   - Adjustment in Taiwan Strait
   - Add Guardafui Channel
