--- a/localisation/english/MD_NATO_events_l_english.yml
+++ b/localisation/english/MD_NATO_events_l_english.yml
@@ -31,7 +31,7 @@
  nato_join_Nato_Nuclear_Sharing_desc: "Nuclear sharing is a concept in NATO´s policy of Nuclear deterrence, which allows all member countries without nuclear weapons of their own to participate in the planing in the planning for the use of nuclear weapons by NATO, we should join."
 
  Nato_Nuclear_Sharing: "Ask for Access to the Nuclear Weapons"
- Nato_Nuclear_Sharing_desc: "the tensions are rising, we need to get these weapons to defend our country and our allied"
+ Nato_Nuclear_Sharing_desc: "Tensions are rising, we need to get these weapons in order to defend our country and our allies."
  nato_leave_Nato_Nuclear_Sharing: "Leave the sharing groupe"
  nato_leave_Nato_Nuclear_Sharing_desc: "we don´t want to be part of these groupe anymore. no more foreign nuclear weapons in our courty."
  Nato_Nuclear_Sharing_I_TT: "We get access to §Y[USA.GetNameWithFlag]§! made §Y20 nuclear warhead 45kt§! and §Y20 ALGM§! for §Y365 days§!\n"
