gas contract between russia and belarus

--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1741,7 +1741,11 @@
  POL_more_than_30_support_for_nationalists_TT: "§YRuch Narodowy§! has more than §Y30%§! support."
  BLR_POL_more_than_50_percent_influence_TT: "§Y[BLR.GetAdjective]§! Influence in [POL.GetNameWithFlag] is Over 50%"
  BLR_with_tt: "Additional Income: $$§G0.150§! From the Joint [BLR.GetFlag]Belarusian-[SOV.GetFlag]Russian §YPotassium Trade§!\n"
- BLR_without_tt: "Additional Income: $$§G0.210§!From §YPotassium Trade§!\n"
+ BLR_without_tt: "Additional Income: $$§G0.210§!From the Joint [BLR.GetFlag]Belarusian-[SOV.GetFlag]Russian §YPotassium Trade§!\n"
+ BLR_rus_oil_tt: "Weekly expense of $§R0.044§! for §Y[SOV.GetFlag]Russian§! energy resources\n"
+ BLR_rus_oil_positive_tt: "Weekly expense of $§R0.066§! for §Y[SOV.GetFlag]Russian§! energy resources\n"
+ BLR_sov_oil_tt: "Additional Income: $$§G0.44§! for the energy contract with §Y[BLR.GetFlag]Belarus§!\n"
+ BLR_sov_oil_positive_tt: "Additional Income: $$§G0.66§! for the energy contract with §Y[BLR.GetFlag]Belarus§!\n"
  BLR_tourism_tt: "Additional Income: $$§G0.150§!\n"
  BLR_tourism3_tt: "Additional Income: $$§G0.250§!\n"
  BLR_tourism4_tt: "Additional Income: $$§G0.400§!\n"
@@ -2358,6 +2362,7 @@
  Union_bio: "Union Cooperation in BioTechnology"
  BLR_B200_Polonez: "B200 Polonez"
  asseco_research: "Asseco Research."
+ BLR_oil_sov: "Energy Contract With Belarus"
 
  belarus_another.6.t: "The Cult of Lukashenko."
  belarus_another.6.d: "Alexander Lukashenko has been the permanent President of the Republic of Belarus for a very long time. During his reign, a whole cult of \"batka\" built up around him. This cult distinguishes him from other dictators of the CIS but also forces him to interact with his people in a special way. The support of the Batka is an indicator showing how great the support of Alexander Grigoryevich Lukashenko is in all segments of the population. Depending on various actions, this indicator will decrease or increase, giving various bonuses or debuffs."
